--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "spatie/laravel-permission": "^2.12"
     },
     "require-dev": {
+        "appzcoder/crud-generator": "^3.0",
         "filp/whoops": "^2.0",
         "fzaninotto/faker": "^1.4",
         "mockery/mockery": "^1.0",
